# traduco

./: .gitignore  CHANGELOG.md  LinguaEdit-windows.spec  LinguaEdit.spec  README.md  SECURITY_AUDIT.md  auto_translate.py  blog_post.md  generate_translations.py  pyproject.toml  se.danielnylander.LinguaEdit.yml  translate_ts.py
.github/scripts/: build_deb.py
.github/workflows/: build-deb.yml  build.yml  transifex-sync.yml
.tx/: config
data/macos/LinguaEdit.app/Contents/: Info.plist
data/macos/LinguaEdit.app/Contents/Resources/: linguaedit.icns
debian/: changelog
docs/: api.md  editing.md  faq.md  features.md  formats.md  getting-started.md  index.md  keyboard-shortcuts.md  usage.md
man/: linguaedit-gui.1
po/: de.po  linguaedit.pot  sv.po  traduco.pot
po/locale/sv/LC_MESSAGES/: linguaedit.mo  traduco.mo
resources/flags/: LICENSE
scripts/: inject_translations.py  linguaedit.spec  update_translations.py
src/linguaedit/: __init__.py  __main__.py  app.py
src/linguaedit/parsers/: __init__.py  android_parser.py  apple_strings.py  arb_parser.py  chrome_i18n.py  godot.py  java_properties.py  json_parser.py  mqxliff_parser.py  php_parser.py  po_parser.py  resx.py  sdlxliff_parser.py  subtitles.py  ts_parser.py  unity_asset.py  xliff_parser.py  yaml_parser.py
src/linguaedit/services/: __init__.py  achievements.py  ffmpeg.py  git_integration.py  github.py  glossary.py  history.py  keystore.py  linter.py  macros.py  platforms.py  plugins.py  qa_profiles.py  report.py  segmenter.py  settings.py  spellcheck.py  svlang_checker.py  tm.py  tmx.py  translator.py  updater.py
src/linguaedit/translations/: README.md  linguaedit.ts  linguaedit_ar.ts  linguaedit_cs.ts  linguaedit_da.qm  linguaedit_da.ts  linguaedit_de.qm  linguaedit_de.ts  linguaedit_es.qm  linguaedit_es.ts  linguaedit_fi.ts  linguaedit_fr.qm  linguaedit_fr.ts  linguaedit_it.ts  linguaedit_ja.qm  linguaedit_ja.ts  linguaedit_ko.qm  linguaedit_ko.ts  linguaedit_nb.qm  linguaedit_nb.ts  linguaedit_nl.ts  linguaedit_pl.qm  linguaedit_pl.ts  linguaedit_pt_BR.qm  linguaedit_pt_BR.ts  linguaedit_ru.ts  linguaedit_sv.qm  linguaedit_sv.ts  linguaedit_uk.qm  linguaedit_uk.ts  linguaedit_zh_CN.qm  linguaedit_zh_CN.ts
src/linguaedit/ui/: __init__.py  achievements_dialog.py  ai_review_dialog.py  batch_edit_dialog.py  batch_translate_dialog.py  concordance_dialog.py  context_panel.py  dashboard_dialog.py  diff_dialog.py  entry_delegate.py  glossary_dialog.py  history_dialog.py  macro_dialog.py  minimap.py  ocr_dialog.py  platform_dialog.py  plugin_dialog.py  plural_forms_editor.py  preferences_dialog.py  progress_ring.py  project_dock.py  quick_actions.py  regex_tester_dialog.py  segment_ops.py  sync_dialog.py  syntax_highlighting.py  translation_editor.py  unicode_dialog.py  video_preview.py  video_subtitle_dialog.py  welcome_dialog.py  window.py  zen_mode.py
src/traduco/: __init__.py
src/traduco/services/: keystore.py  platforms.py
src/traduco/ui/: platform_dialog.py  sync_dialog.py  window.py
tests/: conftest.py  test_linter.py  test_parsers.py  test_security.py  test_settings.py  test_tm.py
tests/fixtures/: chrome_messages.json  strings.xml  test.arb  test.asset  test.csv  test.php  test.po  test.properties  test.resx  test.srt  test.strings  test.tmx  test.ts  test.vtt  test.xliff  test.yaml  test_flat.json  test_nested.json
translations/: README.md  linguaedit_da.qm  linguaedit_da.ts  linguaedit_de.qm  linguaedit_de.ts  linguaedit_es.qm  linguaedit_es.ts  linguaedit_fr.qm  linguaedit_fr.ts  linguaedit_ja.qm  linguaedit_ja.ts  linguaedit_ko.qm  linguaedit_ko.ts  linguaedit_nb.qm  linguaedit_nb.ts  linguaedit_pl.qm  linguaedit_pl.ts  linguaedit_pt_BR.qm  linguaedit_pt_BR.ts  linguaedit_sv.qm  linguaedit_sv.ts  linguaedit_sv_auto.ts  linguaedit_template.ts  linguaedit_zh_CN.qm  linguaedit_zh_CN.ts
ui/: syntax_highlighting.py
